--- a/dbt/budgeting/dbt_project.yml
+++ b/dbt/budgeting/dbt_project.yml
@@ -32,8 +32,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  expenses:
+  budgeting:
     spending:
       +materialized: view
     # Config indicated by + and applies to all files under models/example/
-    
