--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -40,6 +40,12 @@ jobs:
       - name: upload expenses to big query py script
         run: |
           python src/upload_expenses_to_bigquery.py
+      - name: upload income to big query py script
+        run: |
+          python src/upload_income_to_bigquery.py
+      - name: upload savings to big query py script
+        run: |
+          python src/upload_savings_to_bigquery.py
       - name: Decrypt large secret
         run: ./decrypt_secret.sh
         env:
