--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ SPLITWISE_CONSUMER_KEY=asdghjla
 SPLITWISE_CONSUMER_SECRET_KEY=asdghaj
 SPLITWISE_API_KEY=asdagdhj
 ENCRYPT_KEY=1GY3G8G128
+GSHEET_SHEET_ID=XXX-XX-XX
