--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,10 @@ entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.15.3
 Flask==1.1.2
+forex-python==1.8
 google==3.0.0
 google-api-core==2.7.1
-google-api-python-client==2.43.0
+google-api-python-client==2.48.0
 google-auth==2.6.3
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.1
@@ -95,6 +96,7 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.8
 Send2Trash==1.8.0
+simplejson==3.17.6
 six==1.15.0
 soupsieve==2.3.2
 splitwise==2.3.0
