--- a/requirements.txt
+++ b/requirements.txt
@@ -12,12 +12,15 @@ cffi==1.15.0
 chardet==3.0.4
 click==7.1.2
 cryptography==36.0.2
+db-dtypes==1.0.5
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
+distlib==0.3.6
 entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.15.3
+filelock==3.8.2
 Flask==1.1.2
 forex-python==1.8
 google==3.0.0
@@ -47,6 +50,7 @@ ipywidgets==7.7.0
 itsdangerous==1.1.0
 jedi==0.18.1
 Jinja2==2.11.2
+joblib==1.2.0
 jsonschema==4.4.0
 jupyter==1.0.0
 jupyter-client==7.2.2
@@ -61,6 +65,7 @@ nbclient==0.5.13
 nbconvert==6.4.5
 nbformat==5.3.0
 nest-asyncio==1.5.5
+nltk==3.7
 notebook==6.4.10
 numpy==1.22.3
 oauthlib==3.1.0
@@ -70,6 +75,8 @@ pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+pipenv==2022.11.30
+platformdirs==2.6.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 proto-plus==1.20.3
@@ -92,21 +99,29 @@ pytz==2022.1
 pyzmq==22.3.0
 qtconsole==5.3.0
 QtPy==2.0.1
+regex==2022.10.31
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.8
+scikit-learn==1.2.0
+scipy==1.9.3
 Send2Trash==1.8.0
 simplejson==3.17.6
 six==1.15.0
+sklearn==0.0.post1
 soupsieve==2.3.2
 splitwise==2.3.0
 stack-data==0.2.0
 terminado==0.13.3
 testpath==0.6.0
+threadpoolctl==3.1.0
 tornado==6.1
+tqdm==4.64.1
 traitlets==5.1.1
 uritemplate==4.1.1
 urllib3==1.25.9
+virtualenv==20.17.1
+virtualenv-clone==0.5.7
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
