--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,13 +20,12 @@ jobs:
     steps:
       - name: checkout repo content
         uses: actions/checkout@v2 # checkout the repository content to github runner.
-      - name: setup python
-        uses: actions/setup-python@v2
+      - name: setup conda
+        uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.8 #install the python needed
-          cache: pip
-      - run: pip install -r requirements.txt
-      - name: update expenses py script
+          activate-environment: anaconda-client-env
+          environment-file: environment.yml
+          python-version: 3.8
         run: |
           python src/update_expenses.py
       - name: upload expenses to splitiwse py script
