--- a/.github/workflows/predict_cats.yml
+++ b/.github/workflows/predict_cats.yml
@@ -20,12 +20,15 @@ jobs:
     steps:
       - name: checkout repo content
         uses: actions/checkout@v2 # checkout the repository content to github runner.
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8 #install the python needed
       - name: setup conda
         uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: anaconda-client-env
-          environment-file: environment.yml
-          python-version: 3.8
+          python-version: 3.8 # set python version to 3.8
+          environment-file: environment.yml # specify the environment.yml file for Conda to create environment
       - name: update expenses py script
         run: |
           python src/predict_categories.py
