--- a/environment.yml
+++ b/environment.yml
@@ -1,319 +1,321 @@
 name: expenses
 channels:
   - anaconda
-  - conda-forge
   - defaults
+  - conda-forge
 dependencies:
-  - aiohttp=3.8.3
-  - aiosignal=1.2.0
-  - anyio=3.5.0
-  - appdirs=1.4.4
-  - argon2-cffi=21.3.0
-  - argon2-cffi-bindings=21.2.0
-  - arrow-cpp=10.0.1
-  - astroid=2.9.0
-  - asttokens=2.0.5
-  - async-timeout=4.0.2
-  - attrs=22.1.0
-  - aws-c-auth=0.6.21
-  - aws-c-cal=0.5.20
-  - aws-c-common=0.8.5
-  - aws-c-compression=0.2.16
-  - aws-c-event-stream=0.2.16
-  - aws-c-http=0.6.29
-  - aws-c-io=0.13.11
-  - aws-c-mqtt=0.7.13
-  - aws-c-s3=0.2.1
-  - aws-c-sdkutils=0.1.7
-  - aws-checksums=0.1.14
-  - aws-crt-cpp=0.18.16
-  - aws-sdk-cpp=1.9.379
-  - backcall=0.2.0
-  - backports.cached-property=1.0.2
-  - beautifulsoup4=4.11.1
-  - black=22.10.0
-  - blas=1.0
-  - bleach=4.1.0
-  - blosc=1.21.2
-  - boost-cpp=1.78.0
-  - bottleneck=1.3.5
-  - brotli=1.0.9
-  - brotlipy=0.7.0
-  - bzip2=1.0.8
-  - c-ares=1.18.1
-  - ca-certificates=2022.4.26
-  - cachetools=4.2.2
-  - cairo=1.16.0
-  - certifi=2022.6.15
-  - cffi=1.15.1
-  - cfitsio=4.2.0
-  - chardet=4.0.0
-  - charset-normalizer=2.0.4
-  - click=8.0.4
-  - click-plugins=1.1.1
-  - cligj=0.7.2
-  - colorama=0.4.6
-  - contourpy=1.0.5
-  - cryptography=38.0.1
-  - curl=7.87.0
-  - cycler=0.11.0
-  - dataclasses=0.8
-  - db-dtypes=1.0.5
-  - debugpy=1.5.1
-  - decorator=5.1.1
-  - defusedxml=0.7.1
-  - diff-cover=7.3.0
-  - entrypoints=0.4
-  - executing=0.8.3
-  - expat=2.5.0
-  - fastavro=1.7.0
-  - fftw=3.3.9
-  - fiona=1.8.22
-  - flit-core=3.6.0
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=2.001
-  - font-ttf-source-code-pro=2.030
-  - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.1
-  - fonts-anaconda=1
-  - fonts-conda-ecosystem=1
-  - fonttools=4.25.0
-  - freetype=2.12.1
-  - freexl=1.0.6
-  - frozenlist=1.3.3
-  - gdal=3.6.1
-  - geopandas=0.9.0
-  - geopandas-base=0.9.0
-  - geos=3.11.1
-  - geotiff=1.7.1
-  - gettext=0.21.1
-  - gflags=2.2.2
-  - giflib=5.2.1
-  - glog=0.6.0
-  - google-api-core=2.10.1
-  - google-api-core-grpc=2.10.1
-  - google-api-python-client=2.70.0
-  - google-auth=2.15.0
-  - google-auth-httplib2=0.1.0
-  - google-cloud-bigquery=3.4.1
-  - google-cloud-bigquery-core=3.4.1
-  - google-cloud-bigquery-storage=2.11.0
-  - google-cloud-bigquery-storage-core=2.11.0
-  - google-cloud-core=2.3.2
-  - google-cloud-sdk=412.0.0
-  - google-crc32c=1.5.0
-  - google-resumable-media=2.4.0
-  - googleapis-common-protos=1.56.4
-  - grpcio=1.51.1
-  - grpcio-status=1.41.1
-  - hdf4=4.2.15
-  - hdf5=1.12.2
-  - hologram=0.0.15
-  - httplib2=0.21.0
-  - icu=70.1
-  - idna=3.4
-  - importlib-metadata=4.11.3
-  - importlib_metadata=4.11.3
-  - iniconfig=1.1.1
-  - intel-openmp=2021.4.0
-  - ipykernel=6.15.2
-  - ipython=8.7.0
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.7.1
-  - isort=5.9.3
-  - jedi=0.18.1
-  - jinja2=3.1.2
-  - joblib=1.1.1
-  - jpeg=9e
-  - json-c=0.16
-  - jsonschema=3.0.2
-  - jupyter_client=7.4.8
-  - jupyter_core=5.1.1
-  - jupyter_server=1.23.4
-  - jupyterlab_pygments=0.1.2
-  - jupyterlab_widgets=1.0.0
-  - kealib=1.5.0
-  - kiwisolver=1.4.4
-  - krb5=1.20.1
-  - lazy-object-proxy=1.6.0
-  - lcms2=2.14
-  - lerc=4.0.0
-  - libabseil=20220623.0
-  - libaec=1.0.6
-  - libarrow=10.0.1
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libcrc32c=1.1.2
-  - libcst=0.3.19
-  - libcurl=7.87.0
-  - libcxx=14.0.6
-  - libdeflate=1.14
-  - libedit=3.1.20221030
-  - libev=4.33
-  - libevent=2.1.10
-  - libffi=3.4.2
-  - libgdal=3.6.1
-  - libgfortran5=11.3.0
-  - libglib=2.74.1
-  - libgoogle-cloud=2.5.0
-  - libgrpc=1.51.1
-  - libiconv=1.17
-  - libkml=1.3.0
-  - libnetcdf=4.8.1
-  - libnghttp2=1.47.0
-  - libpng=1.6.39
-  - libpq=15.1
-  - libprotobuf=3.21.11
-  - librttopo=1.1.0
-  - libsodium=1.0.18
-  - libspatialindex=1.9.3
-  - libspatialite=5.0.1
-  - libsqlite=3.40.0
-  - libssh2=1.10.0
-  - libthrift=0.16.0
-  - libtiff=4.4.0
-  - libutf8proc=2.8.0
-  - libwebp=1.2.4
-  - libwebp-base=1.2.4
-  - libxml2=2.10.3
-  - libzip=1.9.2
-  - libzlib=1.2.13
-  - llvm-openmp=14.0.6
-  - logbook=1.5.3
-  - lz4-c=1.9.4
-  - mapclassify=2.4.3
-  - markupsafe=2.1.1
-  - mashumaro=3.3
-  - matplotlib-base=3.6.2
-  - matplotlib-inline=0.1.6
-  - mccabe=0.7.0
-  - minimal-snowplow-tracker=0.0.2
-  - mistune=0.8.4
-  - mkl=2021.4.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.1
-  - mkl_random=1.2.2
-  - multidict=6.0.2
-  - munch=2.5.0
-  - munkres=1.1.4
-  - mypy_extensions=0.4.3
-  - nbclassic=0.4.8
-  - nbclient=0.5.13
-  - nbconvert=6.4.4
-  - nbformat=5.7.0
-  - ncurses=6.3
-  - nest-asyncio=1.5.6
-  - networkx=2.8.4
-  - nltk=3.7
-  - notebook=6.5.2
-  - notebook-shim=0.2.2
-  - nspr=4.33
-  - nss=3.78
-  - numexpr=2.8.4
-  - numpy=1.23.5
-  - numpy-base=1.23.5
-  - openjpeg=2.5.0
-  - openssl=1.1.1s
-  - orc=1.8.1
-  - packaging=21.3
-  - pandas=1.5.2
-  - pandocfilters=1.5.0
-  - parquet-cpp=1.5.1
-  - parso=0.8.3
-  - pathspec=0.9.0
-  - pcre2=10.40
-  - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pillow=9.3.0
-  - pip=22.3.1
-  - pixman=0.40.0
-  - platformdirs=2.5.2
-  - pluggy=1.0.0
-  - poppler=22.12.0
-  - poppler-data=0.4.11
-  - postgresql=15.1
-  - proj=9.1.0
-  - prometheus_client=0.14.1
-  - prompt-toolkit=3.0.36
-  - proto-plus=1.22.1
-  - protobuf=4.21.11
-  - psutil=5.9.0
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.2
-  - py=1.11.0
-  - pyarrow=10.0.1
-  - pyasn1=0.4.8
-  - pyasn1-modules=0.2.8
-  - pycparser=2.21
-  - pygments=2.11.2
-  - pylint=2.12.2
-  - pyopenssl=22.0.0
-  - pyparsing=3.0.9
-  - pyproj=3.4.1
-  - pyrsistent=0.18.0
-  - pysocks=1.7.1
-  - pytest=7.1.2
-  - python=3.9.15
-  - python-dateutil=2.8.2
-  - python-dotenv=0.21.0
-  - python-fastjsonschema=2.16.2
-  - python_abi=3.9
-  - pytz=2022.7
-  - pyu2f=0.1.5
-  - pyyaml=6.0
-  - pyzmq=23.2.0
-  - re2=2022.06.01
-  - readline=8.2
-  - regex=2022.7.9
-  - requests=2.28.1
-  - rsa=4.7.2
-  - rtree=0.9.7
-  - scikit-learn=1.1.3
-  - scipy=1.9.3
-  - send2trash=1.8.0
-  - setuptools=65.5.0
-  - shapely=1.8.5
-  - six=1.16.0
-  - snappy=1.1.9
-  - sniffio=1.2.0
-  - soupsieve=2.3.2.post1
-  - sqlfluff=1.4.5
-  - sqlite=3.40.0
-  - stack_data=0.2.0
-  - tblib=1.7.0
-  - terminado=0.17.1
-  - testpath=0.6.0
-  - threadpoolctl=2.2.0
-  - tiledb=2.13.0
-  - tk=8.6.12
-  - toml=0.10.2
-  - tomli=2.0.1
-  - tornado=6.2
-  - tqdm=4.64.1
-  - traitlets=5.7.1
-  - typing=3.10.0.0
-  - typing-extensions=4.4.0
-  - typing_extensions=4.4.0
-  - typing_inspect=0.7.1
-  - tzcode=2022g
-  - tzdata=2022g
-  - uritemplate=4.1.1
-  - urllib3=1.26.13
-  - wcwidth=0.2.5
-  - webencodings=0.5.1
-  - websocket-client=0.58.0
-  - wheel=0.37.1
-  - widgetsnbextension=3.6.1
-  - wrapt=1.13.3
-  - xerces-c=3.2.4
-  - xz=5.2.8
-  - yaml=0.2.5
-  - yarl=1.8.1
-  - zeromq=4.3.4
-  - zipp=3.11.0
-  - zlib=1.2.13
-  - zstd=1.5.2
+  - aiohttp=3.8.3=py39h6c40b1e_0
+  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - anyio=3.5.0=py39hecd8cb5_0
+  - appdirs=1.4.4=pyhd3eb1b0_0
+  - appnope=0.1.2=py39hecd8cb5_1001
+  - argon2-cffi=21.3.0=pyhd3eb1b0_0
+  - argon2-cffi-bindings=21.2.0=py39hca72f7f_0
+  - arrow-cpp=10.0.1=h57ddcff_3_cpu
+  - astroid=2.9.0=py39hecd8cb5_0
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - async-timeout=4.0.2=py39hecd8cb5_0
+  - attrs=22.1.0=py39hecd8cb5_0
+  - aws-c-auth=0.6.21=h79862ba_1
+  - aws-c-cal=0.5.20=h2f96456_3
+  - aws-c-common=0.8.5=hb7f2c08_0
+  - aws-c-compression=0.2.16=hfb1f584_0
+  - aws-c-event-stream=0.2.16=hb9fe1ad_0
+  - aws-c-http=0.6.29=h40fbe91_0
+  - aws-c-io=0.13.11=hb3bb6ef_2
+  - aws-c-mqtt=0.7.13=h9baa75a_10
+  - aws-c-s3=0.2.1=hfb6aee5_2
+  - aws-c-sdkutils=0.1.7=hfb1f584_0
+  - aws-checksums=0.1.14=hfb1f584_0
+  - aws-crt-cpp=0.18.16=hb25e9ed_5
+  - aws-sdk-cpp=1.9.379=h6febe8c_6
+  - backcall=0.2.0=pyhd3eb1b0_0
+  - backports.cached-property=1.0.2=pyhd8ed1ab_0
+  - beautifulsoup4=4.11.1=py39hecd8cb5_0
+  - black=22.10.0=py39h6e9494a_2
+  - blas=1.0=mkl
+  - bleach=4.1.0=pyhd3eb1b0_0
+  - blosc=1.21.2=hebb52c4_0
+  - boost-cpp=1.78.0=h8b082ac_1
+  - bottleneck=1.3.5=py39h67323c0_0
+  - brotli=1.0.9=hb1e8313_2
+  - brotlipy=0.7.0=py39h9ed2024_1003
+  - bzip2=1.0.8=h1de35cc_0
+  - c-ares=1.18.1=hca72f7f_0
+  - ca-certificates=2022.4.26=hecd8cb5_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
+  - cairo=1.16.0=h904041c_1014
+  - certifi=2022.6.15=py39hecd8cb5_0
+  - cffi=1.15.1=py39h6c40b1e_3
+  - cfitsio=4.2.0=hd56cc12_0
+  - chardet=4.0.0=py39hecd8cb5_1003
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.0.4=py39hecd8cb5_0
+  - click-plugins=1.1.1=pyhd3eb1b0_0
+  - cligj=0.7.2=py39hecd8cb5_0
+  - colorama=0.4.6=py39hecd8cb5_0
+  - contourpy=1.0.5=py39haf03e11_0
+  - cryptography=38.0.1=py39hf6deb26_0
+  - curl=7.87.0=haf73cf8_0
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - dataclasses=0.8=pyh6d0b6a4_7
+  - db-dtypes=1.0.5=pyhd8ed1ab_0
+  - debugpy=1.5.1=py39he9d5cce_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
+  - diff-cover=7.3.0=pyhd8ed1ab_0
+  - entrypoints=0.4=py39hecd8cb5_0
+  - executing=0.8.3=pyhd3eb1b0_0
+  - expat=2.5.0=hf0c8a7f_0
+  - fastavro=1.7.0=py39h6c40b1e_0
+  - fftw=3.3.9=h9ed2024_1
+  - fiona=1.8.22=py39hb507cee_5
+  - flit-core=3.6.0=pyhd3eb1b0_0
+  - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
+  - font-ttf-inconsolata=2.001=hcb22688_0
+  - font-ttf-source-code-pro=2.030=hd3eb1b0_0
+  - font-ttf-ubuntu=0.83=h8b1ccd4_0
+  - fontconfig=2.14.1=h5bb23bf_0
+  - fonts-anaconda=1=h8fa9717_0
+  - fonts-conda-ecosystem=1=hd3eb1b0_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
+  - freetype=2.12.1=hd8bbffd_0
+  - freexl=1.0.6=h9ed2024_0
+  - frozenlist=1.3.3=py39h6c40b1e_0
+  - gdal=3.6.1=py39h6aafa27_1
+  - geopandas=0.9.0=py_1
+  - geopandas-base=0.9.0=py_1
+  - geos=3.11.1=hf0c8a7f_0
+  - geotiff=1.7.1=he29fd1c_4
+  - gettext=0.21.1=h8a4c099_0
+  - gflags=2.2.2=h0a44026_0
+  - giflib=5.2.1=haf1e3a3_0
+  - glog=0.6.0=h8ac2a54_0
+  - google-api-core=2.10.1=py39hecd8cb5_0
+  - google-api-core-grpc=2.10.1=py39hecd8cb5_0
+  - google-api-python-client=2.70.0=pyhd8ed1ab_0
+  - google-auth=2.15.0=pyh1a96a4e_0
+  - google-auth-httplib2=0.1.0=pyhd8ed1ab_1
+  - google-cloud-bigquery=3.4.1=pyhd8ed1ab_0
+  - google-cloud-bigquery-core=3.4.1=pyhd8ed1ab_0
+  - google-cloud-bigquery-storage=2.11.0=pyh6c4a22f_0
+  - google-cloud-bigquery-storage-core=2.11.0=pyh6c4a22f_0
+  - google-cloud-core=2.3.2=py39hecd8cb5_0
+  - google-cloud-sdk=412.0.0=py39h6e9494a_0
+  - google-crc32c=1.5.0=py39h6c40b1e_0
+  - google-resumable-media=2.4.0=py39hecd8cb5_0
+  - googleapis-common-protos=1.56.4=py39hecd8cb5_0
+  - grpcio=1.51.1=py39h69d5c6f_0
+  - grpcio-status=1.41.1=pyhd3eb1b0_0
+  - hdf4=4.2.15=h7aa5921_5
+  - hdf5=1.12.2=nompi_h70e9adf_101
+  - hologram=0.0.15=pyhd8ed1ab_0
+  - httplib2=0.21.0=pyhd8ed1ab_0
+  - icu=70.1=h96cf925_0
+  - idna=3.4=py39hecd8cb5_0
+  - importlib-metadata=4.11.3=py39hecd8cb5_0
+  - importlib_metadata=4.11.3=hd3eb1b0_0
+  - iniconfig=1.1.1=pyhd3eb1b0_0
+  - intel-openmp=2021.4.0=hecd8cb5_3538
+  - ipykernel=6.15.2=py39hecd8cb5_0
+  - ipython=8.7.0=py39hecd8cb5_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  - ipywidgets=7.7.1=pyhd8ed1ab_0
+  - isort=5.9.3=pyhd3eb1b0_0
+  - jedi=0.18.1=py39hecd8cb5_1
+  - jinja2=3.1.2=py39hecd8cb5_0
+  - joblib=1.1.1=py39hecd8cb5_0
+  - jpeg=9e=hca72f7f_0
+  - json-c=0.16=hca72f7f_0
+  - jsonschema=3.0.2=py39hecd8cb5_0
+  - jupyter_client=7.4.8=py39hecd8cb5_0
+  - jupyter_core=5.1.1=py39hecd8cb5_0
+  - jupyter_server=1.23.4=py39hecd8cb5_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
+  - kealib=1.5.0=h5c1f988_0
+  - kiwisolver=1.4.4=py39hcec6c5f_0
+  - krb5=1.20.1=h0165f36_0
+  - lazy-object-proxy=1.6.0=py39h9ed2024_0
+  - lcms2=2.14=h90f4b2a_0
+  - lerc=4.0.0=hb486fe8_0
+  - libabseil=20220623.0=cxx17_h844d122_6
+  - libaec=1.0.6=he49afe7_0
+  - libarrow=10.0.1=h7129002_3_cpu
+  - libbrotlicommon=1.0.9=hca72f7f_7
+  - libbrotlidec=1.0.9=hca72f7f_7
+  - libbrotlienc=1.0.9=hca72f7f_7
+  - libcrc32c=1.1.2=he9d5cce_0
+  - libcst=0.3.19=py39hecd8cb5_0
+  - libcurl=7.87.0=haf73cf8_0
+  - libcxx=14.0.6=h9765a3e_0
+  - libdeflate=1.14=hb7f2c08_0
+  - libedit=3.1.20221030=h6c40b1e_0
+  - libev=4.33=h9ed2024_1
+  - libevent=2.1.10=h815e4d9_4
+  - libffi=3.4.2=hecd8cb5_6
+  - libgdal=3.6.1=h46da3b9_1
+  - libgfortran=5.0.0=11_3_0_hecd8cb5_28
+  - libgfortran5=11.3.0=h9dfd629_28
+  - libglib=2.74.1=h4c723e1_1
+  - libgoogle-cloud=2.5.0=h32e9745_1
+  - libgrpc=1.51.1=h834a566_0
+  - libiconv=1.17=hac89ed1_0
+  - libkml=1.3.0=haeb80ef_1015
+  - libnetcdf=4.8.1=nompi_hc61b76e_106
+  - libnghttp2=1.47.0=h7cbc4dc_1
+  - libpng=1.6.39=ha978bb4_0
+  - libpq=15.1=hdbdeef1_2
+  - libprotobuf=3.21.11=hbc0c0cd_0
+  - librttopo=1.1.0=h9461dca_12
+  - libsodium=1.0.18=h1de35cc_0
+  - libspatialindex=1.9.3=h23ab428_0
+  - libspatialite=5.0.1=hc1c2c66_22
+  - libsqlite=3.40.0=ha978bb4_0
+  - libssh2=1.10.0=h0a4fc7d_0
+  - libthrift=0.16.0=h08c06f4_2
+  - libtiff=4.4.0=h6268bbc_5
+  - libutf8proc=2.8.0=hb7f2c08_0
+  - libwebp=1.2.4=h56c3ce4_0
+  - libwebp-base=1.2.4=hca72f7f_0
+  - libxml2=2.10.3=hb9e07b5_0
+  - libzip=1.9.2=h3ad4413_1
+  - libzlib=1.2.13=hfd90126_4
+  - llvm-openmp=14.0.6=h0dcd299_0
+  - logbook=1.5.3=py39ha30fb19_7
+  - lz4-c=1.9.4=hcec6c5f_0
+  - mapclassify=2.4.3=pyhd3eb1b0_0
+  - markupsafe=2.1.1=py39hca72f7f_0
+  - mashumaro=3.3=pyhd8ed1ab_0
+  - matplotlib-base=3.6.2=py39h220de94_0
+  - matplotlib-inline=0.1.6=py39hecd8cb5_0
+  - mccabe=0.7.0=pyhd3eb1b0_0
+  - minimal-snowplow-tracker=0.0.2=pyhd8ed1ab_0
+  - mistune=0.8.4=py39h9ed2024_1000
+  - mkl=2021.4.0=hecd8cb5_637
+  - mkl-service=2.4.0=py39h9ed2024_0
+  - mkl_fft=1.3.1=py39h4ab4a9b_0
+  - mkl_random=1.2.2=py39hb2f4e1b_0
+  - multidict=6.0.2=py39hca72f7f_0
+  - munch=2.5.0=pyhd3eb1b0_0
+  - munkres=1.1.4=py_0
+  - mypy_extensions=0.4.3=py39hecd8cb5_1
+  - nbclassic=0.4.8=py39hecd8cb5_0
+  - nbclient=0.5.13=py39hecd8cb5_0
+  - nbconvert=6.4.4=py39hecd8cb5_0
+  - nbformat=5.7.0=py39hecd8cb5_0
+  - ncurses=6.3=hca72f7f_3
+  - nest-asyncio=1.5.6=py39hecd8cb5_0
+  - networkx=2.8.4=py39hecd8cb5_0
+  - nltk=3.7=pyhd3eb1b0_0
+  - notebook=6.5.2=py39hecd8cb5_0
+  - notebook-shim=0.2.2=py39hecd8cb5_0
+  - nspr=4.33=he9d5cce_0
+  - nss=3.78=ha8197d3_0
+  - numexpr=2.8.4=py39he696674_0
+  - numpy=1.23.5=py39he696674_0
+  - numpy-base=1.23.5=py39h9cd3388_0
+  - openjpeg=2.5.0=h5d0d7b0_1
+  - openssl=1.1.1s=hfd90126_1
+  - orc=1.8.1=ha9d861c_0
+  - packaging=21.3=pyhd3eb1b0_0
+  - pandas=1.5.2=py39h07fba90_0
+  - pandocfilters=1.5.0=pyhd3eb1b0_0
+  - parquet-cpp=1.5.1=h34088ae_4
+  - parso=0.8.3=pyhd3eb1b0_0
+  - pathspec=0.9.0=py39hecd8cb5_0
+  - pcre2=10.40=h1c4e4bc_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=9.3.0=py39h81888ad_1
+  - pip=22.3.1=py39hecd8cb5_0
+  - pixman=0.40.0=h9ed2024_1
+  - platformdirs=2.5.2=py39hecd8cb5_0
+  - pluggy=1.0.0=py39hecd8cb5_1
+  - poppler=22.12.0=hf2ff1a1_0
+  - poppler-data=0.4.11=hecd8cb5_0
+  - postgresql=15.1=h1482631_2
+  - proj=9.1.0=hcbd9701_0
+  - prometheus_client=0.14.1=py39hecd8cb5_0
+  - prompt-toolkit=3.0.36=py39hecd8cb5_0
+  - proto-plus=1.22.1=py39hecd8cb5_0
+  - protobuf=4.21.11=py39h7a8716b_0
+  - psutil=5.9.0=py39hca72f7f_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
+  - py=1.11.0=pyhd3eb1b0_0
+  - pyarrow=10.0.1=py39h31d4e7f_3_cpu
+  - pyasn1=0.4.8=pyhd3eb1b0_0
+  - pyasn1-modules=0.2.8=py_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.11.2=pyhd3eb1b0_0
+  - pylint=2.12.2=py39hecd8cb5_1
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pyparsing=3.0.9=py39hecd8cb5_0
+  - pyproj=3.4.1=py39h2798b3d_0
+  - pyrsistent=0.18.0=py39hca72f7f_0
+  - pysocks=1.7.1=py39hecd8cb5_0
+  - pytest=7.1.2=py39hecd8cb5_0
+  - python=3.9.15=h218abb5_2
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-dotenv=0.21.0=pyhd8ed1ab_0
+  - python-fastjsonschema=2.16.2=py39hecd8cb5_0
+  - python_abi=3.9=2_cp39
+  - pytz=2022.7=py39hecd8cb5_0
+  - pyu2f=0.1.5=pyhd8ed1ab_0
+  - pyyaml=6.0=py39h6c40b1e_1
+  - pyzmq=23.2.0=py39he9d5cce_0
+  - re2=2022.06.01=hb486fe8_1
+  - readline=8.2=hca72f7f_0
+  - regex=2022.7.9=py39hca72f7f_0
+  - requests=2.28.1=py39hecd8cb5_0
+  - rsa=4.7.2=pyhd3eb1b0_1
+  - rtree=0.9.7=py39hecd8cb5_1
+  - scikit-learn=1.1.3=py39he9d5cce_0
+  - scipy=1.9.3=py39h3d31255_0
+  - send2trash=1.8.0=pyhd3eb1b0_1
+  - setuptools=65.5.0=py39hecd8cb5_0
+  - shapely=1.8.5=py39hed42127_2
+  - six=1.16.0=pyhd3eb1b0_1
+  - snappy=1.1.9=he9d5cce_0
+  - sniffio=1.2.0=py39hecd8cb5_1
+  - soupsieve=2.3.2.post1=py39hecd8cb5_0
+  - sqlfluff=1.4.5=pyhd8ed1ab_0
+  - sqlite=3.40.0=h880c91c_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
+  - tblib=1.7.0=pyhd3eb1b0_0
+  - terminado=0.17.1=py39hecd8cb5_0
+  - testpath=0.6.0=py39hecd8cb5_0
+  - threadpoolctl=2.2.0=pyh0d69192_0
+  - tiledb=2.13.0=h3b7b576_1
+  - tk=8.6.12=h5d9f67b_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - tomli=2.0.1=py39hecd8cb5_0
+  - tornado=6.2=py39hca72f7f_0
+  - tqdm=4.64.1=py39hecd8cb5_0
+  - traitlets=5.7.1=py39hecd8cb5_0
+  - typing=3.10.0.0=py39hecd8cb5_0
+  - typing-extensions=4.4.0=py39hecd8cb5_0
+  - typing_extensions=4.4.0=py39hecd8cb5_0
+  - typing_inspect=0.7.1=pyhd3eb1b0_0
+  - tzcode=2022g=hb7f2c08_0
+  - tzdata=2022g=h04d1e81_0
+  - uritemplate=4.1.1=pyhd8ed1ab_0
+  - urllib3=1.26.13=py39hecd8cb5_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - webencodings=0.5.1=py39hecd8cb5_1
+  - websocket-client=0.58.0=py39hecd8cb5_4
+  - wheel=0.37.1=pyhd3eb1b0_0
+  - widgetsnbextension=3.6.1=pyha770c72_0
+  - wrapt=1.13.3=py39hca72f7f_2
+  - xerces-c=3.2.4=h2007e90_1
+  - xz=5.2.8=h6c40b1e_0
+  - yaml=0.2.5=haf1e3a3_0
+  - yarl=1.8.1=py39hca72f7f_0
+  - zeromq=4.3.4=h23ab428_0
+  - zipp=3.11.0=py39hecd8cb5_0
+  - zlib=1.2.13=hfd90126_4
+  - zstd=1.5.2=hcb37349_0
   - pip:
       - forex-python==1.8
       - oauthlib==3.2.2
