--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,20 +20,18 @@ jobs:
     steps:
       - name: checkout repo content
         uses: actions/checkout@v2 # checkout the repository content to github runner.
-      - name: setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9 #install the python needed
       - name: setup conda
-        uses: conda-incubator/setup-miniconda@v2
+         - uses: conda-incubator/setup-miniconda@v2
         with:
+          activate-environment: expenses
           environment-file: environment.yml
-      - name: Conda List and activate conda
+          python-version: 3.9
+          auto-activate-base: false
+      - name: Check Conda 
         run: |
-          conda env list
-          conda init bash
-      - name: Activate conda environment
-        run: conda activate test # specify the environment.yml file for Conda to create environment
+          conda info
+          conda list
+          conda activate expenses
       - name: update expenses py script
         run: |
           python src/update_expenses.py
