--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,8 +15,11 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  expenses:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -el {0}
     steps:
       - name: checkout repo content
         uses: actions/checkout@v2 # checkout the repository content to github runner.
@@ -30,7 +33,9 @@ jobs:
       - name: Check Conda 
         run: |
           conda info
-          conda list
+          conda list   
+      - name: Check Conda 
+        run: |
           conda activate expenses
       - name: update expenses py script
         run: |
