Add Test Run variable and return to pip

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ SPLITWISE_CONSUMER_SECRET_KEY=asdghaj
 SPLITWISE_API_KEY=asdagdhj
 ENCRYPT_KEY=1GY3G8G128
 GSHEET_SHEET_ID=XXX-XX-XX
+TEST_RUN= Yes / No
