--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,9 +4,22 @@ name: Manual workflow
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
-on: workflow_dispatch
-
+on:
+  workflow_dispatch:
+    # Inputs the workflow accepts.
+    inputs:
+      test:
+        # Friendly description to be shown in the UI instead of 'name'
+        type: choice
+        description: 'Is this a test?'
+        # Default value if no value is explicitly provided
+        options:
+        - Yes
+        - No
+        # Input has to be provided for the workflow to run
+        required: true
 env:
+  TEST_RUN: ${{ github.event.inputs.test }}
   SPLITWISE_CONSUMER_KEY: '${{ secrets.SPLITWISE_CONSUMER_KEY }}'
   SPLITWISE_CONSUMER_SECRET_KEY: '${{ secrets.SPLITWISE_CONSUMER_SECRET_KEY }}'
   SPLITWISE_API_KEY: '${{ secrets.SPLITWISE_API_KEY }}'
@@ -15,25 +28,17 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  expenses:
+  build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -l {0}
     steps:
       - name: checkout repo content
         uses: actions/checkout@v2 # checkout the repository content to github runner.
-      - name: setup conda
-        uses: conda-incubator/setup-miniconda@v2
+      - name: setup python
+        uses: actions/setup-python@v2
         with:
-          activate-environment: expenses
-          environment-file: environment.yml
-          python-version: 3.9
-          auto-activate-base: false
-      - name: Check Conda 
-        run: |
-          conda info
-          conda list   
+          python-version: 3.9 #install the python needed
+          cache: pip
+      - run: pip install -r requirements.txt
       - name: update expenses py script
         run: |
           python src/update_expenses.py
