--- a/requirements.txt
+++ b/requirements.txt
@@ -1,183 +1,10 @@
-aiohttp==3.8.3
-aiosignal==1.2.0
-anyio==3.5.0
-appdirs==1.4.4
-appnope==0.1.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-astroid==2.9.0
-asttokens==2.0.5
-async-timeout==4.0.2
-attrs==22.1.0
-backcall==0.2.0
-backports.cached-property==1.0.2
-beautifulsoup4==4.11.1
-black==22.10.0
-bleach==4.1.0
-Bottleneck==1.3.5
-brotlipy==0.7.0
-cachetools==4.2.2
-certifi==2022.6.15
-cffi==1.15.1
-chardet==4.0.0
-charset-normalizer==2.0.4
-click==8.0.4
-click-plugins==1.1.1
-cligj==0.7.2
-colorama==0.4.6
-contourpy==1.0.5
 cryptography==38.0.1
-cycler==0.11.0
-db-dtypes==1.0.5
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-diff-cover==7.3.0
-entrypoints==0.4
-executing==0.8.3
-fastavro==1.7.0
-fastjsonschema==2.16.2
-Fiona==1.8.22
-flit_core==3.6.0
-fonttools==4.25.0
-forex-python==1.8
-frozenlist==1.3.3
-GDAL==3.6.1
-geopandas==0.9.0
-google-api-core==2.10.1
-google-api-python-client==2.70.0
-google-auth==2.15.0
-google-auth-httplib2==0.1.0
-google-cloud-bigquery==3.4.1
-google-cloud-bigquery-storage==2.11.0
-google-cloud-core==2.3.2
-google-crc32c==1.5.0
-google-resumable-media==2.4.0
-googleapis-common-protos==1.56.4
-grpcio==1.51.1
-grpcio-status==1.41.1
-hologram==0.0.15
-httplib2==0.21.0
-idna==3.4
-importlib-metadata==4.11.3
-iniconfig==1.1.1
-ipykernel==6.15.2
-ipython==8.7.0
-ipython-genutils==0.2.0
-ipywidgets==7.7.1
-isort==5.9.3
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.1.1
-jsonschema==3.0.2
-jupyter_client==7.4.8
-jupyter_core==5.1.1
-jupyter-server==1.23.4
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-kiwisolver==1.4.4
-lazy-object-proxy==1.6.0
-libcst==0.3.19
-Logbook==1.5.3
-mapclassify==2.4.3
-MarkupSafe==2.1.1
-mashumaro==3.3
-matplotlib==3.6.2
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-minimal-snowplow-tracker==0.0.2
-mistune==0.8.4
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-multidict==6.0.2
-munch==2.5.0
-munkres==1.1.4
-mypy-extensions==0.4.3
-nbclassic==0.4.8
-nbclient==0.5.13
-nbconvert==6.4.4
-nbformat==5.7.0
-nest-asyncio==1.5.6
-networkx==2.8.4
+forex_python==1.8
+google_api_python_client==2.70.0
 nltk==3.7
-notebook==6.5.2
-notebook_shim==0.2.2
-numexpr==2.8.4
 numpy==1.23.5
-oauthlib==3.2.2
-packaging==21.3
 pandas==1.5.2
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.9.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.3.0
-pip==22.3.1
-platformdirs==2.5.2
-pluggy==1.0.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.36
-proto-plus==1.22.1
 protobuf==4.21.11
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py==1.11.0
-pyarrow==10.0.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-Pygments==2.11.2
-pylint==2.12.2
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-pyproj==3.4.1
-pyrsistent==0.18.0
-PySocks==1.7.1
-pytest==7.1.2
-python-dateutil==2.8.2
-python-dotenv==0.21.0
-pytz==2022.7
-pyu2f==0.1.5
-PyYAML==6.0
-pyzmq==23.2.0
-regex==2022.7.9
-requests==2.28.1
-requests-oauthlib==1.3.1
-rsa==4.7.2
-Rtree==0.9.7
-scikit-learn==1.1.3
-scipy==1.9.3
-Send2Trash==1.8.0
-setuptools==65.5.0
-Shapely==1.8.5.post1
-simplejson==3.18.0
-six==1.16.0
-sniffio==1.2.0
-soupsieve==2.3.2.post1
+python-dotenv==1.0.0
+scikit_learn==1.1.3
 splitwise==2.5.0
-sqlfluff==1.4.5
-stack-data==0.2.0
-tblib==1.7.0
-terminado==0.17.1
-testpath==0.6.0
-threadpoolctl==2.2.0
-toml==0.10.2
-tomli==2.0.1
-tornado==6.2
-tqdm==4.64.1
-traitlets==5.7.1
-typing_extensions==4.4.0
-typing-inspect==0.7.1
-uritemplate==4.1.1
-urllib3==1.26.13
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.58.0
-wheel==0.37.1
-widgetsnbextension==3.6.1
-wrapt==1.13.3
-yarl==1.8.1
-zipp==3.11.0
