--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 cryptography==38.0.1
 forex_python==1.8
-google_api_python_client==2.70.0
 nltk==3.7
 numpy==1.23.5
 pandas==1.5.2
@@ -8,3 +7,17 @@ protobuf==4.21.11
 python-dotenv==1.0.0
 scikit_learn==1.1.3
 splitwise==2.5.0
+google==3.0.0
+google-api-core==2.7.1
+google_api_python_client==2.70.0
+google-auth==2.6.3
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.5.1
+google-cloud==0.34.0
+google-cloud-bigquery==3.0.1
+google-cloud-bigquery-storage==2.13.1
+google-cloud-core==2.3.0
+google-cloud-storage==2.3.0
+google-crc32c==1.3.0
+google-resumable-media==2.3.2
+googleapis-common-protos==1.56.0
