--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ google-crc32c==1.5.0
 google-resumable-media==2.4.0
 googleapis-common-protos==1.56.4
 pyarrow==10.0.1
+cryptography==38.0.1
+forex_python==1.8
+nltk==3.7
