--- a/.github/workflows/predict_cats.yml
+++ b/.github/workflows/predict_cats.yml
@@ -2,20 +2,8 @@
 
 name: Predict Categories
 
-on:
-  workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      test:
-        # Friendly description to be shown in the UI instead of 'name'
-        type: choice
-        description: 'Is this a test?'
-        # Default value if no value is explicitly provided
-        options:
-        - 'Yes'
-        - 'No'
-        # Input has to be provided for the workflow to run
-        required: true
+on: workflow_dispatch
+
 env:
   TEST_RUN: ${{ github.event.inputs.test }}
   SPLITWISE_CONSUMER_KEY: '${{ secrets.SPLITWISE_CONSUMER_KEY }}'
