--- a/dbt/budgeting/models/spending/src_spending.yml
+++ b/dbt/budgeting/models/spending/src_spending.yml
@@ -5,18 +5,18 @@ sources:
     database: python-splitwise
     schema: budgeting
     tables:
-        - name: splitwise_expenses
-          loaded_at_field: date
+        - name: t_expenses_fact
+          loaded_at_field: date_dt
           freshness:
             warn_after: {count: 1, period: day}
             error_after: {count: 5, period: day}
-        - name: gsheet_savings
-          loaded_at_field: date
+        - name: t_balances_fact
+          loaded_at_field: date_dt
           freshness:
             warn_after: {count: 1, period: day}
             error_after: {count: 5, period: day}
-        - name: gsheet_income
-          loaded_at_field: date
+        - name: t_income_fact
+          loaded_at_field: date_dt
           freshness:
             warn_after: {count: 1, period: day}
             error_after: {count: 5, period: day}
