--- a/.github/workflows/new_description.yml
+++ b/.github/workflows/new_description.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: Predict Categories
+name: Update Descriptions
 
 on: workflow_dispatch
 
